variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: value =! is not a member of Int
while(2*Biscuit=!caseOrange+1){
               ^