variables.RunHalf.scala.code
var Biscuit:Int=0
var caseOrange : Int=0
while(2*Biscuit=!caseOrange+1){
  avance()
  if(estSurBiscuit==true){
    Biscuit=Biscuit+1
  }
  if(estSurOrange==true){
    caseOrange=caseOrange+1
  }
}